# NewtooUI-GLFW

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  CMakeSettings.json  Context.cpp  Context.h  Diligent.cpp  Diligent.h  DualRenderTarget.cpp  DualRenderTarget.h  Editor.cpp  Editor.hpp  Elements.cpp  Elements.h  Gizmos.cpp  Gizmos.h  HalfEdge.cpp  HalfEdge.h  MathExtras.cpp  MathExtras.h  Mesh.cpp  Mesh.h  MyProject.cpp  MyProject.h  RenderTarget.cpp  RenderTarget.h  Resource.cpp  Resource.h  Shape.cpp  Shape.h  TextRenderer.cpp  TextRenderer.h
assets/: Roboto-Regular.fnt
assets/Roboto/: Roboto-Regular.json
platform/MacOS/: LayerManager.h  LayerManager.m
